manifests/network-policies/00-default-deny-all.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: workloads
spec:
  endpointSelector: {}
  ingress: []
  egress: []

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: argocd
spec:
  endpointSelector: {}
  ingress: []
  egress: []
  
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-all
  namespace: kyverno
spec:
  endpointSelector: {}
  ingress: []
  egress: []
