manifests/network-policies/03-argocd-internal.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-internal
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: argocd
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/part-of: argocd
