manifests/network-policies/04-argocd-github-egress.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-github-egress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  egress:
    - toFQDNs:
        - matchName: "github.com"
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
